--- a/ticketbook/src/main/resources/application.properties
+++ b/ticketbook/src/main/resources/application.properties
@@ -1,1 +1,42 @@
 spring.application.name=ticketbook
+
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/
+
+# Database Configuration (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketbook_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Logging
+logging.level.root=INFO
+logging.level.com.swd.ticketbook=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
+# Session Configuration
+server.servlet.session.timeout=24h
+
+# File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Jackson Configuration (for JSON serialization)
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=UTC
+
+# OAuth2 Configuration (Google)
+# TODO: Add your Google OAuth2 credentials
+# spring.security.oauth2.client.registration.google.client-id=YOUR_CLIENT_ID
+# spring.security.oauth2.client.registration.google.client-secret=YOUR_CLIENT_SECRET
+# spring.security.oauth2.client.registration.google.scope=profile,email
