fix: fix auth service

--- a/ticketbook/src/main/resources/application.properties
+++ b/ticketbook/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.servlet.context-path=/
 
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketbook_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
